examples/type_system/failing/79_hm_module_generic_call_mismatch.flx
import TypeSystem.HmGenericModule as M

let x: Int = M.id("oops")
